<resources>
    <string name="app_name">homework</string>
    <string name="homework_1">homework 1</string>
    <string name="homework_2">homework 2</string>
    <string name="homework_3">homework 3</string>
    <string name="the_image_will_be_here">The image will be here</string>
    <string name="write_your_url_here">Write your URL here</string>
    <string name="load_image">Load image</string>
    <string name="back">Back</string>
    <string name="paste_url_here">Paste URL here</string>
    <string name="flags">flags</string>
    <string name="animation">animation</string>
    <string name="armenia">Armenia</string>
    <string name="austria">Austria</string>
    <string name="belgium">Belgium</string>
    <string name="latvia">Latvia</string>
    <string name="denmark">Denmark</string>
    <string name="spain">Spain</string>
    <string name="minsk_region">Minsk region</string>
    <string name="wheat">Wheat</string>
    <string name="rye">Rye</string>
    <string name="oats">Oats</string>
    <string name="null_string">0</string>
    <string name="vitebsk_region">Vitebsk region</string>
    <string name="gomel_region">Gomel region</string>
    <string name="species">species</string>
    <string name="color">color</string>
    <string name="height">height</string>
    <string name="add_snowdrop">Add snowdrop</string>
    <string name="url">image URL</string>
    <string name="species_text">Species :</string>
    <string name="color_text">Color :</string>
    <string name="height_text">Height :</string>
    <string name="add">add</string>
    <string name="homework_4">homework 4</string>
    <string name="collection">Collection</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="homework_5">homework 5</string>
    <string name="day">С ДНЕМ</string>
    <string name="of_victory">ПОБЕДЫ</string>
    <string name="cong_line_1">ЭТОТ ДЕНЬ ПОБЕДЫ</string>
    <string name="cong_line_2">ПОРОХОМ ПРОПАХ !</string>
    <string name="cong_line_3">ЭТО ПРАЗДНИК</string>
    <string name="cong_line_4">С СЕДИНОЮ НА ВИСКАХ</string>
    <string name="cong_line_5">ЭТО РАДОСТЬ</string>
    <string name="cong_line_6">СО СЛЕЗАМИ НА ГЛАЗАХ.</string>
    <string name="cong_line_7">ДЕНЬ ПОБЕДЫ !</string>
    <string name="homework_6">homework 6</string>
    <string name="rotate">Перевернуть открытку</string>
</resources>