<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button

            android:id="@+id/button_homework_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/double_margin"
            android:padding="16dp"
            android:text="@string/homework_1"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/button_homework_2"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/button_homework_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/double_margin"
            android:padding="16dp"
            android:text="@string/homework_2"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/button_homework_3"
            app:layout_constraintTop_toBottomOf="@id/button_homework_1"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/button_homework_3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/double_margin"
            android:padding="16dp"
            android:text="@string/homework_3"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/button_homework_4"
            app:layout_constraintTop_toBottomOf="@+id/button_homework_2"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/button_homework_4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/double_margin"
            android:padding="16dp"
            android:text="@string/homework_4"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/button_homework_5"
            app:layout_constraintTop_toBottomOf="@+id/button_homework_3"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/button_homework_5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/double_margin"
            android:layout_marginTop="2dp"
            android:padding="16dp"
            android:text="@string/homework_5"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_homework_4"
            tools:layout_editor_absoluteX="16dp" />
        <Button
            android:id="@+id/button_homework_6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/double_margin"
            android:padding="16dp"
            android:text="@string/homework_6"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/button_homework_3"
            app:layout_constraintTop_toBottomOf="@id/button_homework_1"
            tools:layout_editor_absoluteX="16dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>