<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        app:layout_constraintBottom_toTopOf="@+id/url_editor"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/the_image_will_be_here"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/url_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/double_margin"
        android:text="@string/write_your_url_here"
        app:layout_constraintBottom_toTopOf="@+id/button_load_image"
        app:layout_constraintTop_toBottomOf="@+id/image"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/button_load_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/double_margin"
        android:text="@string/load_image"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>