<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_species"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/species"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_flower">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_species_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_color"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:hint="@string/color"
        app:layout_constraintTop_toBottomOf="@+id/input_species"
        app:startIconDrawable="@drawable/ic_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_color_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_url"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:hint="@string/url"
        app:layout_constraintTop_toBottomOf="@+id/input_color"
        app:startIconDrawable="@drawable/ic_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_url_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_view_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/input_url"
        android:text="@string/height"
        android:gravity="center"
        />

    <com.google.android.material.slider.Slider
        android:id="@+id/input_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="0.0"
        android:valueTo="50.0"
        app:layout_constraintTop_toBottomOf="@+id/text_view_height" />

    <Button
        android:id="@+id/button_add_snowdrop"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_snowdrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_height" />

</androidx.constraintlayout.widget.ConstraintLayout>